--- a/public/new.file.html
+++ b/public/new.file.html
@@ -29,3 +29,18 @@
 
     </body>
 </html>
+
+
+
+
+
+echo "# Personal-Site" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin git@github.com:MMTidwell/Personal-Site.git
+git push -u origin master
+…or push an existing repository from the command line
+
+git remote add origin git@github.com:MMTidwell/Personal-Site.git
+git push -u origin master
