--- a/public/index.html
+++ b/public/index.html
@@ -10,51 +10,22 @@
 
 		<!-- Bootstrap core CSS -->
 		<link rel="stylesheet" href="/bootstrap-3.3.6-dist/css/bootstrap.css">
-    	<!-- <link href="css/one-page-wonder.css" rel="stylesheet"> -->
 
+        <!-- PERSONAL CSS -->
 		<link rel="stylesheet" type="text/css" href="/p_website.css">
+
+        <!-- THIS IS FOR THE ICONS -->
+        <!-- http://fontawesome.io/cdn/success/ -->
+        <script src="https://use.fontawesome.com/37f2d2a99c.js"></script>
+
 	</head>
 
 	<body>
 		
-        <!-- Navigation -->
-<!--         <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-            <div class="container topnav"> -->
-                <!-- Brand and toggle get grouped for better mobile display -->
-<!--                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
-                </div> -->
-                <!-- Collect the nav links, forms, and other content for toggling -->
-<!--                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div> -->
-                <!-- /.navbar-collapse -->
-            <!-- </div> -->
-            <!-- /.container -->
-        <!-- </nav> -->
-
-
         <!-- Header -->
         <a name="about"></a>
         <div class="intro-header">
             <div class="container">
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="intro-message">
@@ -62,21 +33,20 @@
                             <hr class="intro-divider">
                             <ul class="list-inline intro-social-buttons">
                                 <li>
-                                    <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                    <a href="https://github.com/MMTidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                    <a href="https://www.linkedin.com/in/mittsytidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
+            </div><!-- /.container -->
+        </div><!-- /.intro-header -->
 
-            </div>
-            <!-- /.container -->
 
-        </div>
-        <!-- /.intro-header -->
+
 
         <!-- Page Content -->
 
@@ -205,10 +175,10 @@
         </footer>
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <script src="/jquery-3.1.0.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        <!-- // <script src="js/bootstrap.min.js"></script> -->
 
 
     	<!-- Bootstrap core JavaScript -->
