--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
                             <!-- CONNECT BUTTONS -->
                             <ul class="list-inline intro-social-buttons">
                                 <li>
-                                    <a href="https://github.com/MMTidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                    <a href="https://github.com/MMTidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw" id="icon"></i> <span class="network-name">Github</span></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.linkedin.com/in/mittsytidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                    <a href="https://www.linkedin.com/in/mittsytidwell" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw" id="icon"></i> <span class="network-name">Linkedin</span></a>
                                 </li>
                             </ul>
                         </div> <!-- container-fluid navbar-inner -->
@@ -60,7 +60,7 @@
                             <!-- HOLDS LINKS ON RIGHT SIDE AND TOGGLES DOWN WHEN SMALL -->
                             <ul class="nav navbar-nav navbar-right" id="linkOnPage">
                                 <li >
-                                    <li><a href="#">About</a></li>
+                                    <li><a href="#about">About</a></li>
                                     <li><a href="#">Code</a></li>
                                     <li><a href="#">Connect</a></li>
                                     <li><a href="#">Blog</a></li>
@@ -73,7 +73,7 @@
                     </nav>
                 </div> <!-- inro message -->
             </div><!-- /.container -->
-        </div><!-- /.intro-header -->
+        </div><!-- /header -->
 
 
 
@@ -81,27 +81,41 @@
 
         <!-- Page Content -->
 
-        <a  name="services"></a>
-        <div class="content-section-a">
+        <!-- ABOUT -->
+        <div class="content-section-a" id="about">
+        <div class="divider"></div>
 
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 col-sm-6">
-                        <hr class="section-heading-spacer">
-                        <div class="clearfix"></div>
-                        <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                        <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
-                    </div>
-                    <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/ipad.png" alt="">
-                    </div>
+                <div class="col-lg-5 col-sm-6">
+                    <!-- <div class="divider"></div> -->
+
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
                 </div>
+                <!-- IMAGE -->
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="/headshot.jpg" alt="image" id="headshot">
+                </div><!-- </div> -->
+            </div><!-- /.container -->
+        </div><!-- /.content-section-a -->
 
-            </div>
-            <!-- /.container -->
 
-        </div>
-        <!-- /.content-section-a -->
+
+
 
         <div class="content-section-b">
 
@@ -125,6 +139,8 @@
         </div>
         <!-- /.content-section-b -->
 
+
+
         <div class="content-section-a">
 
             <div class="container">
@@ -146,6 +162,9 @@
 
         </div>
         <!-- /.content-section-a -->
+
+
+
 
         <a  name="contact"></a>
         <div class="banner">
@@ -176,6 +195,9 @@
 
         </div>
         <!-- /.banner -->
+
+
+
 
         <!-- Footer -->
         <footer>
