--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
 	<body>
 		
-        <!-- Header -->
+<!-- Header -->
         <div class="intro-header">
             <div class="container">
                 <div class="intro-message">
@@ -61,7 +61,7 @@
                             <ul class="nav navbar-nav navbar-right" id="linkOnPage">
                                 <li >
                                     <li><a href="#about">About</a></li>
-                                    <li><a href="#">Code</a></li>
+                                    <li><a href="#code">Code</a></li>
                                     <li><a href="#">Connect</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Contact</a></li>
@@ -75,20 +75,11 @@
             </div><!-- /.container -->
         </div><!-- /header -->
 
-
-
-
-
-        <!-- Page Content -->
-
-        <!-- ABOUT -->
+<!-- ABOUT -->
         <div class="content-section-a" id="about">
         <div class="divider"></div>
-
             <div class="container">
                 <div class="col-lg-5 col-sm-6">
-                    <!-- <div class="divider"></div> -->
-
                     <p class="lead">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -106,38 +97,65 @@
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </div>
+
                 <!-- IMAGE -->
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="/headshot.jpg" alt="image" id="headshot">
-                </div><!-- </div> -->
+                </div>
+
             </div><!-- /.container -->
         </div><!-- /.content-section-a -->
 
-
-
-
-
-        <div class="content-section-b">
-
+<!-- CODE -->
+        <div class="content-section-b" id="code">
+        <div class="divider2"></div>
             <div class="container">
 
-                <div class="row">
-                    <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                        <hr class="section-heading-spacer">
-                        <div class="clearfix"></div>
-                        <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                        <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                <!-- Carousel -->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                        <img class="first-slide" src="/simplenatural.png" alt="First slide">
+                        </div>
+                        <div class="item">
+                            <img class="second-slide" src="/map.png" alt="Second slide">
+                        </div>
+                        <div class="item">
+                          <img class="third-slide" src="/cal.png" alt="Third slide">
+                        </div>
                     </div>
-                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                        <img class="img-responsive" src="img/dog.png" alt="">
-                    </div>
+
+                    <!-- makes the carousel move to the left -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    </a>
+
+                    <!-- makes the carousel move to the right -->
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    </a>
+                </div><!-- /.carousel -->
+
+                <div class="code-disc">
+                    <h2 class="section-heading">JavaScript</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
                 </div>
-
-            </div>
-            <!-- /.container -->
-
-        </div>
-        <!-- /.content-section-b -->
+            </div><!-- /.container -->
+        </div><!-- /.content-section-b -->
 
 
 
