--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
         <!-- PERSONAL CSS -->
 		<link rel="stylesheet" type="text/css" href="/p_website.css">
+        <!-- <link rel="stylesheet" type="text/css" href="/git.css"> -->
+
 
         <!-- THIS IS FOR THE ICONS -->
         <!-- http://fontawesome.io/cdn/success/ -->
@@ -62,7 +64,6 @@
                                 <li >
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
-                                    <li><a href="#">Connect</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </li>
@@ -78,17 +79,10 @@
 <!-- ABOUT -->
         <div class="content-section-a" id="about">
         <div class="divider"></div>
+        <img src="/swirl.png" id="swirl">
             <div class="container">
                 <div class="col-lg-5 col-sm-6">
-                    <p class="lead">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <p class="lead">
+                    <p class="lead" id="bio">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -157,29 +151,25 @@
             </div><!-- /.container -->
         </div><!-- /.content-section-b -->
 
-
-
-        <div class="content-section-a">
-
+<!-- GITHUB API -->
+        <div class="content-section-a" id="about">
+        <div class="divider"></div>
             <div class="container">
+                <div class="col-lg-5 col-sm-6">
+                    <div id="my-github-projects"></div>
 
-                <div class="row">
-                    <div class="col-lg-5 col-sm-6">
-                        <hr class="section-heading-spacer">
-                        <div class="clearfix"></div>
-                        <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                        <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                    </div>
-                    <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/phones.png" alt="">
-                    </div>
                 </div>
 
-            </div>
-            <!-- /.container -->
 
-        </div>
-        <!-- /.content-section-a -->
+            </div><!-- /.container -->
+        </div><!-- /.content-section-a -->
+
+
+
+
+
+
+
 
 
 
@@ -265,6 +255,10 @@
 
     	<!-- JS -->
     	<script src="/p_website.js"></script>
+        <script src="/git.js"></script>
+
+        
+
 
 	</body>
 </html>
