--- a/public/index.html
+++ b/public/index.html
@@ -155,12 +155,7 @@
         <div class="content-section-a" id="about">
         <div class="divider"></div>
             <div class="container">
-                <div class="col-lg-5 col-sm-6">
-                    <div id="my-github-projects"></div>
-
-                </div>
-
-
+                <div id="github-name"></div>
             </div><!-- /.container -->
         </div><!-- /.content-section-a -->
 
