--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
                                 <li >
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
+                                    <li><a href="#github">GitHub Repositories</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </li>
@@ -152,7 +153,7 @@
         </div><!-- /.content-section-b -->
 
 <!-- GITHUB API -->
-        <div class="content-section-a" id="about">
+        <div class="content-section-a" id="github">
         <div class="divider"></div>
             <div class="container">
                 <div id="github-name"></div>
