--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,10 @@
 		<title>mtidwell.tech</title>
 
 		<!-- Bootstrap core CSS -->
-
 		<link rel="stylesheet" href="/bootstrap-3.3.6-dist/css/bootstrap.css">
 
         <!-- PERSONAL CSS -->
 		<link rel="stylesheet" type="text/css" href="/p_website.css">
-        <!-- <link rel="stylesheet" type="text/css" href="/git.css"> -->
-
 
         <!-- THIS IS FOR THE ICONS -->
         <!-- http://fontawesome.io/cdn/success/ -->
@@ -64,7 +61,7 @@
                                 <li >
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
-                                    <li><a href="#github">GitHub Repositories</a></li>
+                                    <li><a href="#github">GitHub Repos</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </li>
@@ -95,7 +92,7 @@
 
                 <!-- IMAGE -->
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/headshot.jpg" alt="image" id="headshot">
+                    <img class="img-circle" src="/headshot.jpg" alt="image" id="headshot">
                 </div>
 
             </div><!-- /.container -->
@@ -109,15 +106,9 @@
                 <!-- Carousel -->
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                        <img class="first-slide" src="/simplenatural.png" alt="First slide">
+                        <img class="first-slide" src="/simplesimon.png" alt="First slide">
                         </div>
                         <div class="item">
                             <img class="second-slide" src="/map.png" alt="Second slide">
@@ -139,15 +130,9 @@
                 </div><!-- /.carousel -->
 
                 <div class="code-disc">
-                    <h2 class="section-heading">JavaScript</h2>
+                    <h2 class="section-heading">CodeUp Exercises</h2>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                        While attending CodeUp and learning a full LAMP stack (HTML, CSS, JavaScript, Laravel, PHP, jQuery, and MySQL) there were many things to learn. These are just a few projects that I made in class. 
                 </div>
             </div><!-- /.container -->
         </div><!-- /.content-section-b -->
@@ -237,7 +222,6 @@
         <!-- Bootstrap Core JavaScript -->
         <!-- // <script src="/bootstrap3.3.6-dist/js/bootstrap.min.js"></script> -->
 
-
     	<!-- Bootstrap core JavaScript -->
     	<!-- ================================================== -->
     	<!-- Placed at the end of the document so the pages load faster -->
@@ -251,10 +235,6 @@
 
     	<!-- JS -->
     	<script src="/p_website.js"></script>
-        <script src="/git.js"></script>
-
-        
-
 
 	</body>
 </html>
