--- a/public/index.html
+++ b/public/index.html
@@ -150,43 +150,46 @@
 
 
 
+<!-- BLOG -->
+        <div class="content-section-b" id="code">
+        <div class="divider2"></div>
+            <div class="container">
 
+                
+            </div><!-- /.container -->
+        </div><!-- /.content-section-b -->
 
-
-
-
-        <a  name="contact"></a>
-        <div class="banner">
-
+<!-- CONNECT -->
+        <div class="content-section-a" id="github">
+        <div class="divider"></div>
             <div class="container">
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <h2>Connect to Start Bootstrap:</h2>
+                        <h2>Connect with me!</h2>
                     </div>
                     <div class="col-lg-6">
                         <ul class="list-inline banner-social-buttons">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-5x"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-5x"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                     </div>
                 </div>
 
-            </div>
-            <!-- /.container -->
-
-        </div>
-        <!-- /.banner -->
+            </div><!-- /.container -->
+        </div><!-- /.content-section-a -->
 
 
 
+
+
+
+
+ 
 
         <!-- Footer -->
         <footer>
