<a> the JS examples to work

--- a/public/index.html
+++ b/public/index.html
@@ -108,13 +108,16 @@
                     <!-- Indicators -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                        <img class="first-slide" src="/simplesimon.png" alt="First slide">
+                        <a href="simple_simon/s.simon.html" target="_blank"><img class="first-slide" src="/simplesimon.png" alt="First slide"></a>
                         </div>
                         <div class="item">
-                            <img class="second-slide" src="/map.png" alt="Second slide">
+                            <a href="weather/weather_map.html" target="_blank"><img class="second-slide" src="/map.png" alt="Second slide"></a>
                         </div>
                         <div class="item">
-                          <img class="third-slide" src="/cal.png" alt="Third slide">
+                          <a href="cal_js/cal.html" target="_blank"><img class="third-slide" src="/cal.png" alt="Third slide"></a>
+                        </div>
+                        <div class="item">
+                          <a href="magic_eight/index.html" target="_blank"><img class="forth-slide" src="/eight_ball.png" alt="Forth slide"></a>
                         </div>
                     </div>
 
