--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <!-- IMAGE -->
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6 text-center" >
                     <img class="img-circle" src="/headshot.jpg" alt="image" id="headshot">
                 </div>
 
