--- a/public/magic_eight/index.html
+++ b/public/magic_eight/index.html
@@ -24,9 +24,10 @@
         <div class="container" id="ball">
             <h1>THE ANSWER TO ALL YOUR QUESTIONS HERE!</h1>
             <h2>Just click the magic eight ball.</h2>
-            <img src="front_of_ball.png" id="first">
-            <div id="answer"></div>
+            <img src="front_of_ball.png" id="first" class="toggle">
+            
         </div> <!-- .container end -->
+        <div class="flex-container" id="answer"></div>
 
    
     <!-- jQuery -->
