updated bio and added in resume

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
                                     <li><a href="#github">GitHub Repos</a></li>
-                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="SD2016Resume.pdf">Resume</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </li>
                             </ul>
@@ -81,12 +81,11 @@
             <div class="container">
                 <div class="col-lg-5 col-sm-6">
                     <p class="lead" id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <b>Bio</b><br>
+                        <em>Software developer with a background of 10+ years in customer service, excellent problem solving skills, and great team building success. Passionate for backend and front end development to support your company as well as your clients.</em>
+                        <br><br>
+                        <b>Skills and Abilities</b><br>
+                        <em>HTML | CSS | JavaScript | jQuery | AJAX | API | Twitter Bootstrap | PHP | Python | SQL | Laravel | Fashion Design | Team Building | Team Leadership</em>
                     </p>
                 </div>
 
