--- a/public/index.html
+++ b/public/index.html
@@ -152,15 +152,12 @@
 
 
 
-<!-- BLOG -->
+
+<!-- PHP Code -->
         <div class="content-section-b" id="code">
         <div class="divider2"></div>
             <div class="container">
-
-                
-            </div><!-- /.container -->
-        </div><!-- /.content-section-b -->
-
+            </div>
 <!-- CONNECT -->
         <div class="content-section-a" id="github">
         <div class="divider"></div>
@@ -173,10 +170,10 @@
                     <div class="col-lg-6">
                         <ul class="list-inline banner-social-buttons">
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-5x"></i> <span class="network-name"></span></a>
+                                <a href="https://github.com/MMTidwell" class="btn btn-default btn-lg"><i class="fa fa-github fa-5x"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-5x"></i> <span class="network-name"></span></a>
+                                <a href="https://www.linkedin.com/in/mittsytidwell" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-5x"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                     </div>
@@ -184,7 +181,11 @@
 
             </div><!-- /.container -->
         </div><!-- /.content-section-a -->
-
+<!-- PHP Code -->
+        <div class="content-section-b" id="code">
+        <div class="divider2"></div>
+            <div class="container">
+            </div>
 
 
 
@@ -200,26 +201,37 @@
                     <div class="col-lg-12">
                         <ul class="list-inline">
                             <li>
-                                <a href="#">Home</a>
+                                <a href="#top">Home</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
                             <li>
                                 <a href="#about">About</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
-                            <li>
-                                <a href="#services">Services</a>
+                                                        <li>
+                                <a href="code">Code</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
-                            <li>
+                                                        <li>
+                                <a href="github">GitHub Repos</a>
+                            </li>
+                            <li class="footer-menu-divider">&sdot;</li>
+                                                        <li>
+                                <a href="SD2016Resume.pdf">Resume</a>
+                            </li>
+                            <li class="footer-menu-divider">&sdot;</li>
+                                                        <li>
                                 <a href="#contact">Contact</a>
                             </li>
+                            
                         </ul>
                         <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
                     </div>
                 </div>
             </div>
         </footer>
+
+
 
         <!-- jQuery -->
         <script src="/jquery-3.1.0.js"></script>
