--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                           
                             <!-- HOLDS LINKS ON RIGHT SIDE AND TOGGLES DOWN WHEN SMALL -->
-                            <ul class="nav navbar-nav navbar-right" id="linkOnPage">
+                            <ul class="nav navbar-nav navbar-right pull-right" id="linkOnPage">
                                 <li >
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
