--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <p class="lead" id="bio">
                         <b>Bio</b><br>
-                        <em>Software developer with a background of 10+ years in customer service, excellent problem solving skills, and great team building success. Passionate for backend and front end development to support your company as well as your clients.</em>
+                        <em>Software developer with a background of 10+ years in operations management and customer service, excellent problem solving skills, and great team building success. Passionate for backend and front end development to support your company as well as your clients. </em>
                         <br><br>
                         <b>Skills and Abilities</b><br>
                         <em>HTML | CSS | JavaScript | jQuery | AJAX | API | Twitter Bootstrap | PHP | Python | SQL | Laravel | Fashion Design | Team Building | Team Leadership</em>
