trying to get the updated reusme on the site

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#code">Code</a></li>
                                     <li><a href="#github">GitHub Repos</a></li>
-                                    <li><a href="SD2016Resume.pdf">Resume</a></li>
+                                    <li><a href="SD2016Resume.pdf" target="_blank">Resume</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </li>
                             </ul>
